# abseil-wrap

./: meson.build
src/: main.cc
subprojects/: abseil-cpp.wrap
